--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3147,3 +3147,37 @@ input, select, textarea {
 					}
 
 	}
+						
+	.fixed-call{
+		position: fixed;
+		max-width: 57px;
+		width: 100%;
+		background-color: rgb(0, 160, 0);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding: 13px 0 10px 0;
+		border-radius: 100%;
+		left: 20px;
+		bottom: 20px;
+		color: black;
+		cursor: pointer;
+		box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.603);
+		transition: .2s;
+	}
+	.fixed-call a{
+		z-index: 1000;
+	}
+	.fixed-call:hover{
+		bottom: 25px;
+		background-color: rgb(0, 172, 0);
+		box-shadow: 0px 5px 10px rgb(0, 153, 0);
+	}
+
+	.fixed-call p{
+		margin: 0;
+	}
+	.fixed-call svg{
+		fill: white;
+		margin: 0 !important;
+	}
