--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3151,12 +3151,12 @@ input, select, textarea {
 	.fixed-call{
 		position: fixed;
 		max-width: 75px;
+		height: 75px;
 		width: 100%;
 		background-color: rgb(0, 160, 0);
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		padding: 20px 0 16px 0;
 		border-radius: 100%;
 		left: 20px;
 		bottom: 20px;
@@ -3166,10 +3166,13 @@ input, select, textarea {
 		transition: .2s;
 	}
 
+	.fixed-call a{
+		margin-top: 5px;
+	}
 	@media only screen and (max-width: 768px) {
 		.fixed-call{
-			max-width: 57px;
-			padding: 15px 0 10px 0;
+			width: 55px;
+			height: 55px;
 		}
 		.fixed-call svg{
 			width: 16px !important;
