--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3162,8 +3162,12 @@ input, select, textarea {
 		bottom: 20px;
 		color: black;
 		cursor: pointer;
-		box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.603);
+		box-shadow: 1px 7px 15px rgb(0, 0, 0);
 		transition: .2s;
+		animation-name: movecall;
+		animation-duration: 1s;
+		animation-iteration-count: infinite;
+		animation-direction: alternate;
 	}
 
 	.fixed-call a{
@@ -3176,6 +3180,9 @@ input, select, textarea {
 		}
 		.fixed-call svg{
 			width: 16px !important;
+		}
+		.fixed-call .scroller{
+			display: none;
 		}
 	}
 	.fixed-call a{
@@ -3194,3 +3201,12 @@ input, select, textarea {
 		fill: white;
 		margin: 0 !important;
 	}
+
+	@keyframes movecall {
+		from {transform: translateY(0%);}
+		to {transform: translateY(10%);}
+	  }
+
+	  html{
+		scroll-behavior: smooth;
+	  }
